[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Sprites/Panel.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Panel.gd" type="Script" id=2]

[node name="Panel" type="NinePatchRect"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12
script = ExtResource( 2 )

[node name="HorizontalBoltsContainer" type="Node2D" parent="."]

[node name="VerticalBoltsContainer" type="Node2D" parent="."]

[connection signal="resized" from="." to="." method="_on_Panel_resized"]
